Remove unecessary `add_compile_flags`
Again, this was redundant.

--- a/enclave/core/CMakeLists.txt
+++ b/enclave/core/CMakeLists.txt
@@ -47,16 +47,12 @@ target_include_directories(oecore SYSTEM PRIVATE ${OE_C_COMPILER_INCDIR})
 # This directory contains dummy C headers needed by dlmalloc:
 target_include_directories(oecore PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/dlmalloc)
 
-add_target_compile_flags(oecore PUBLIC "C;CXX"
+target_compile_options(oecore PUBLIC
     -m64
     -fPIC
     -nostdinc
     -fno-stack-protector
     -fvisibility=hidden
-    )
-
-add_target_compile_flags(oecore PUBLIC CXX
-    -nostdinc++
     )
 
 if(USE_LIBSGX)
